--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/webaverse-studios/metaversefile.git"
   },
-  "author": "Avaer Kazmer <a@modules.io>",
-  "license": "ISC",
+  "author": "Webaverse",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/webaverse-studios/metaversefile/issues"
   },
