--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "@webaverse-studios/metaversefile",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/metaversefile.umd.js",
+  "module": "./dist/metaversefile.js",
+  "exports": {
+    ".": {
+      "import": "./dist/metaversefile.mjs",
+      "require": "./dist/metaversefile.umd.js"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build", 
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -23,6 +32,7 @@
     "mime-types": "^2.1.32",
     "node-fetch": "^2.6.1",
     "pako": "^2.0.4",
-    "unix-path": "^0.2.0"
+    "unix-path": "^0.2.0",
+    "vite": "^3.1.3"
   }
 }
