--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@webaverse-studios/metaversefile",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "./dist/metaversefile.umd.js",
+  "module": "./dist/metaversefile.js",
+  "exports": {
+    ".": {
+      "import": "./dist/metaversefile.mjs",
+      "require": "./dist/metaversefile.umd.js"
+    }
+  },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build", 
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -24,15 +29,10 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "data-urls": "^3.0.1",
-    "esbuild": "^0.15.10",
     "mime-types": "^2.1.32",
     "node-fetch": "^2.6.1",
     "pako": "^2.0.4",
     "unix-path": "^0.2.0",
-    "next": "12.3.1"
-  },
-  "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "vite": "^3.1.3"
   }
 }
